--- a/DependencyInjectionApp/Pages/Index.razor
+++ b/DependencyInjectionApp/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
 @using DependencyInjectionApp.Logic
+@inject IDemoLogic logic
+@inject ILogger<Index> logger
 
 <PageTitle>Index</PageTitle>
 
@@ -14,9 +16,8 @@
 </h3>
 
 @code {
-    private DemoLogic logic;
     protected override void OnInitialized()
     {
-        logic = new();
+        logger.LogInformation("Displaying values of: {Value1} and  {Value2}", logic.Value1, logic.Value2);
     }
 }
